--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
 <head>
 <h1>
   <a href="project.html">
-    Beta-Convergence Analysis
+    Beta-Convergence Analys
   </a>
 </h1>
 	<meta charset="utf-8" />
@@ -156,6 +156,7 @@ plt.show()</code></pre>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
