--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</header>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
 					<ul class="actions special">
-						<li><a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="button large">View Project</a></li>
+						<li><a href="project.html" class="button large">View Project</a></li>
 					</ul>
 				</article>
 				
@@ -97,4 +97,5 @@
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
+
 </html>
