--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<article class="post featured">
 				<header class="major">
 
-				<h2><a href="C:\Users\Usuario\Downloads\PortWebsite\project.html">Beta-Convergence Analysis<br />
-				</a></h2>
+				<h2><Beta-Convergence Analysis<br />
+				</h2>
 						<p>A comprehensive study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
 				</header>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
@@ -99,3 +99,4 @@
 	</body>
 
 </html>
+
