--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </ul>
     <ul class="icons">
         <li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-        <li><a href="https://github.com/sergioiglesias" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+        <li><a href="https://github.com/sergioiglesias1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
     </ul>
 </nav>
 
@@ -99,4 +99,5 @@
 	</body>
 
 </html>
+
 
