--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
 			<!-- Main -->
 			<div id="main">
-							
+			<h1>Beta-Convergence Analysis
+			</h1>	
 				<article class="post featured">
 				<header class="major">
 
@@ -99,5 +100,6 @@
 	</body>
 
 </html>
+
 
 
