--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<h3>Social</h3>
 						<ul class="icons alt">
 							<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/sergioiglesias" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</section>
 				</section>
@@ -100,6 +100,7 @@
 	</body>
 
 </html>
+
 
 
 
