--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
 
 			<!-- Main -->
 			<div id="main">
-			<h1>Beta-Convergence Analysis
-			</h1>	
 				<article class="post featured">
 				<header class="major">
-
-				<h2><Beta-Convergence Analysis<br />
-				</h2>
-						<p>A comprehensive study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
+			<h1>Beta-Convergence Analysis
+			</h1>	
+			<h2><Beta-Convergence Analysis<br />
+			</h2>
+			<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
 				</header>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
 					<ul class="actions special">
@@ -100,6 +99,7 @@
 	</body>
 
 </html>
+
 
 
 
