--- a/project.html
+++ b/project.html
@@ -80,7 +80,7 @@ VNM		      5.52				3.63				5.61				2.61
 IRL		      0.01			       -0.78				5.07				1.63
 GBR		      1.27			       -0.33				1.61				1.88
 KOR		      4.22				2.80				2.08				1.33
-NGA		      3.53				3.54				-0.41				0.13
+NGA		      3.53				3.54			       -0.41				0.13
 BGD		      5.07				3.86				5.80				4.18
 PAK		      2.07				0.81				3.59				0.89
 EGY		      2.96				0.58				2.10				2.51
@@ -129,7 +129,7 @@ plt.legend()
 plt.grid(alpha=0.3)
 plt.show()</code></pre>
 					<img src="images/output_1.png" alt="Plot 1" class="image main" />
-                        <p>To start, we generate a plot with linear regression lines to explore beta-convergence by comparing growth rates between the Pre-Crisis (2004–2008) and Recent (2019–2024) periods for Emerging and Developed economies. This first visualization helps to start revealing signs of divergence or convergence.</p>
+                        <p>To start, we generate a plot with linear regression lines to explore β-convergence by comparing growth rates between the Pre-Crisis (2004–2008) and Recent (2019–2024) periods for Emerging and Developed economies. This first visualization helps to start revealing signs of divergence or convergence.</p>
 					<!-- Second plot -->
 					<pre><code># Second regression plot
 x_col = 'Recuperation_Growth (2009-2013)'
@@ -149,7 +149,7 @@ plt.legend()
 plt.grid(alpha=0.3)
 plt.show()</code></pre>
 					<img src="images/output_2.png" alt="Plot 2" class="image main" />
-                        <p>Next, we examine beta-convergence by plotting a linear regression of growth rates between the Recuperation (2009–2013) and Stability (2014–2018) periods.</p>
+                        <p>Next, we examine β-convergence by plotting a linear regression of growth rates between the Recuperation (2009–2013) and Stability (2014–2018) periods.</p>
 					<!-- Third plot -->
 					<pre><code># Third regression plot
 x_col = 'Stability_Growth (2014-2018)'
@@ -169,7 +169,7 @@ plt.legend()
 plt.grid(alpha=0.3)
 plt.show()</code></pre>
 					<img src="images/output_3.png" alt="Plot 3" class="image main" />
-<p>Finally, we create another plot with regression lines to evaluate beta-convergence from the Stability (2014–2018) to the Recent (2019–2024) period. This comparison is the most interesting one, due to the two β coefficients being positive, and also these are the most recent periods in this project.</p>
+<p>Finally, we create another plot with regression lines to evaluate β-convergence from the Stability (2014–2018) to the Recent (2019–2024) period. This comparison is the most interesting one, due to the two β coefficients being positive, and also these are the most recent periods in this project.</p>
 					<h2>Conclusions</h2>
 					<ul>
 						<li><strong>Emerging economies:</strong> Fast growth but diverging (β = 0.47–0.69).</li>
@@ -191,6 +191,7 @@ plt.show()</code></pre>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
