--- a/index.html
+++ b/index.html
@@ -56,8 +56,22 @@
 					<ul class="actions special">
 						<li><a href="project.html" class="button large">View Project</a></li>
 					</ul>
-				</article>
-				
+					</article>
+					
+                                <article>
+                                    <header>
+                                        <span class="date">April 11, 2017</span>
+                                        <h2><a href="#">Odio magna<br />
+                                        sed consectetur</a></h2>
+                                    </header>
+                                    <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                                    <ul class="actions special">
+                                        <li><a href="#" class="button">Full Story</a></li>
+                                    </ul>
+                                </article>
+
+			
 			<!-- Footer -->
 			<footer id="footer">
 				<section class="split contact">
@@ -99,6 +113,7 @@
 	</body>
 
 </html>
+
 
 
 
