--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				<header class="major">
 			<h1>Beta-Convergence Analysis
 			</h1>	
+		    <span class="date">August 4, 2025</span>
 			<h2><Beta-Convergence Analysis<br />
 			</h2>
 			<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
@@ -58,18 +59,17 @@
 					</ul>
 					</article>
 					
-                                <article>
-                                    <header>
-                                        <span class="date">April 11, 2017</span>
-                                        <h2><a href="#">Odio magna<br />
-                                        sed consectetur</a></h2>
-                                    </header>
-                                    <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-                                    <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-                                    <ul class="actions special">
-                                        <li><a href="#" class="button">Full Story</a></li>
-                                    </ul>
-                                </article>
+             <article>
+                     <header>
+                    <span class="date">August 12, 2025</span>
+                     <h2><a href="#">Gold Price Analysis (2004-2025)</a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                                <p>This Tableau dashboard analyzes weekly gold price data through four tables. It shows the difference between closing and opening prices, volume trends, historical closing price trends, and yearly maximum prices. The data is weekly but the maximums are organized by year for clearer insights.</p>
+                                <ul class="actions special">
+                                <li><a href="#" class="button">See dashboard</a></li>
+                          </ul>
+                         </article>
 
 			
 			<!-- Footer -->
@@ -113,6 +113,7 @@
 	</body>
 
 </html>
+
 
 
 
