--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     <span class="date">August 12, 2025</span>
                      <h2><a href="#">Gold Price Analysis (2004-2025)</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="images/104002.jpg" alt="" /></a>
                                 <p>This Tableau dashboard analyzes weekly gold price data through four tables. It shows the difference between closing and opening prices, volume trends, historical closing price trends, and yearly maximum prices. The data is weekly but the maximums are organized by year for clearer insights.</p>
                                 <ul class="actions special">
-                                <li><a href="#" class="button">See dashboard</a></li>
+								<li><a href="https://public.tableau.com/app/profile/sergio.iglesias.l.pez/viz/gold_price_xauusd/XAUUSDDashboard" class="button">See dashboard</a></li>
                           </ul>
                          </article>
 
@@ -113,6 +113,7 @@
 	</body>
 
 </html>
+
 
 
 
