--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
 					<div id="intro">
 						<h1>Sergio<br />
 						Iglesias</h1>
@@ -23,10 +21,9 @@
 						</ul>
 					</div>
 
-				<!-- Main -->
 					<div id="main"></div>
 	<body class="is-preload">
-		<!-- Wrapper -->
+		
 		<div id="wrapper" class="fade-in">
 
 			<header id="header"></header>
@@ -42,7 +39,6 @@
     </ul>
 </nav>
 
-			<!-- Main -->
 			<div id="main">
 				<article class="post featured">
 				<header class="major">
@@ -72,7 +68,6 @@
                          </article>
 
 			
-			<!-- Footer -->
 			<footer id="footer">
 				<section class="split contact">
 					<section class="alt">
@@ -83,17 +78,15 @@
 						<h3>Email</h3>
 						<p><a href="mailto:sergioiglesiaslopez03@gmail.com">sergioiglesiaslopez03@gmail.com</a></p>
 					</section>
-					<section>
-						<h3>Social</h3>
-						<ul class="icons alt">
-							<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</section>
-				</section>
+						<section class="social-container">
+ 						   <h3>Social</h3>
+  						  <ul class="icons alt">
+        					<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+       						 <li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+  						  </ul>
+						</section>
 			</footer>
 
-			<!-- Copyright -->
 			<div id="copyright">
 				<ul>
 					<li>&copy; Untitled</li>
@@ -113,6 +106,7 @@
 	</body>
 
 </html>
+
 
 
 
