--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
 						<h3>Email</h3>
 						<p><a href="mailto:sergioiglesiaslopez03@gmail.com">sergioiglesiaslopez03@gmail.com</a></p>
 					</section>
-						<section class="social-container">
- 						   <h3>Social</h3>
-  						  <ul class="icons alt">
-        					<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-       						 <li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-  						  </ul>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
 						</section>
-			</footer>
+					</footer>
 
 			<div id="copyright">
 				<ul>
@@ -95,7 +96,6 @@
 			</div>
 		</div>
 
-		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrollex.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -106,6 +106,7 @@
 	</body>
 
 </html>
+
 
 
 
