--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -106,6 +106,7 @@
 	</body>
 
 </html>
+
 
 
 
