--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
 
 			
 			<footer id="footer">
+				    <style>
+        #footer .split.contact {
+            display: flex;
+            justify-content: flex-start;
+            gap: 40px;
+        }
+
+        .social-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .social-container .icons.alt {
+            display: flex;
+            gap: 10px;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
+    </style>
 				<section class="split contact">
 					<section class="alt">
 						<h3>Location</h3>
@@ -76,7 +97,7 @@
 						<h3>Email</h3>
 						<p><a href="mailto:sergioiglesiaslopez03@gmail.com">sergioiglesiaslopez03@gmail.com</a></p>
 					</section>
-							<section>
+							<section class="social container">
 								<h3>Social</h3>
 								<ul class="icons alt">
 <li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -104,6 +125,7 @@
 	</body>
 
 </html>
+
 
 
 
