--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<div id="intro">
 						<h1>Sergio<br />
 						Iglesias</h1>
-						<p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Cantabria, Spain, with knowledge in MySQL, Excel, Python, Tableau, and Power BI, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
+						<p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), with knowledge in MySQL, Python, Tableau and and Power BI, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -103,6 +103,7 @@
 	</body>
 
 </html>
+
 
 
 
