--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				</header>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
 					<ul class="actions special">
-						<li><a href="project.html" class="button large">View Project</a></li>
+						<li><a href="project_beta.html" class="button large">View Project</a></li>
 					</ul>
 					</article>
 					
@@ -61,6 +61,18 @@
                                 <p>This Tableau dashboard analyzes weekly gold price data through four tables. It shows the difference between closing and opening prices, volume trends, historical closing price trends, and yearly maximum prices. The data is weekly but the maximums are organized by year for clearer insights.</p>
                                 <ul class="actions special">
 								<li><a href="https://public.tableau.com/app/profile/sergio.iglesias.l.pez/viz/gold_price_xauusd/XAUUSDDashboard" class="button">See dashboard</a></li>
+                          </ul>
+                         </article>
+
+				             <article>
+                     <header>
+                    <span class="date">August 28, 2025</span>
+                     <h2><a href="#">Iris Clasification using Machine Learning with SVM</a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/104002.jpg" alt="" /></a>
+                                <p>This study classifies Iris flower species using Support Vector Machines with hyperparameter optimization. The model achieves 96.7% accuracy on the test set, successfully distinguishing between setosa, versicolor, and virginica species based on sepal and petal measurements.</p>
+                                <ul class="actions special">
+								<li><a href="project_svm.html" class="button large">View Project</a></li>
                           </ul>
                          </article>
 
@@ -103,6 +115,7 @@
 	</body>
 
 </html>
+
 
 
 
