--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span class="date">August 28, 2025</span>
                      <h2><a href="#">Iris Clasification using Machine Learning with SVM</a></h2>
                                 </header>
-    							<a href="#" class="image fit"><img src="images/output_ml_svm.png" alt="Iris Classification Results" /></a>
+    							<a href="project_svm.html" class="image main"><img src="images/output_ml_svm.png" alt="" /></a>
 								<p>This study classifies Iris flower species using Support Vector Machines with hyperparameter optimization. The model achieves 96.7% accuracy on the test set, successfully distinguishing between setosa, versicolor, and virginica species based on sepal and petal measurements.</p>
                                 <ul class="actions special">
 								<li><a href="project_svm.html" class="button large">View Project</a></li>
@@ -115,6 +115,7 @@
 	</body>
 
 </html>
+
 
 
 
