--- a/index.html
+++ b/index.html
@@ -37,18 +37,15 @@
 </nav>
 
 			<div id="main">
-				<article class="post featured">
-				<header class="major">
-			<h1>Beta-Convergence Analysis
-			</h1>	
-		    <span class="date">August 4, 2025</span>
-			<h2><Beta-Convergence Analysis<br />
-			</h2>
-			<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
+				<article>
+				<header>
+					<span class="date">August 4, 2025</span>
+			<h2><a href="#">Beta-Convergence Analysis</a></h2>
 				</header>
+				<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
 					<ul class="actions special">
-						<li><a href="project_beta.html" class="button large">View Project</a></li>
+					<li><a href="project_beta.html" class="button large">View Project</a></li>
 					</ul>
 					</article>
 					
@@ -115,6 +112,7 @@
 	</body>
 
 </html>
+
 
 
 
