--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </nav>
 
 			<div id="main">
-				<article>
-				<header>
+				<article class="post featured">
+				<header class="major">
 					<span class="date">August 4, 2025</span>
 			<h2><a href="#">Beta-Convergence Analysis</a></h2>
 				</header>
@@ -112,6 +112,7 @@
 	</body>
 
 </html>
+
 
 
 
