--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<article class="post featured">
 				<header class="major">
 					<span class="date">August 4, 2025</span>
-					<h2><a href="#">β-Convergence Analysis</a></h2>
+    <h2><a href="#">β-CONVERGENCE ANALYSIS</a></h2>
 				</header>
 				<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
