--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
 					<ul class="actions special">
-					<li><a href="project_beta.html" class="button large">View Project</a></li>
+					<li><a href="project.html" class="button large">View Project</a></li>
 					</ul>
 					</article>
 					
@@ -112,6 +112,7 @@
 	</body>
 
 </html>
+
 
 
 
