--- a/project_svm.html
+++ b/project_svm.html
@@ -101,18 +101,20 @@ Testing Variable: 30 samples
     'svm__C': [0.1, 1, 10, 100],
     'svm__gamma': [0.001, 0.01, 0.1, 1, 'scale']
 }</code></pre>
-Hyperparameters:
-C (Regularization Strength):
-  Controls the trade-off between maximizing the margin and minimizing classification errors.  
-  Tested values: [0.1, 1, 10, 100]
-γ (Gamma - Kernel Coefficient):
-  Defines the reach of each training example's influence in the RBF kernel.  
-  Tested values: [0.001, 0.01, 0.1, 1] with the purpose of scaling the kernel's influence proportionally
-RBF Kernel (Radial Basis Function):
-   $$K(\mathbf{x}_i, \mathbf{x}_j) = \exp\left(-\gamma \cdot \|\mathbf{x}_i - \mathbf{x}_j\|^2\right)$$
-SVM Loss Function (with L2 Regularization):
-   $$\min_{\mathbf{w}, b} \frac{1}{2} \|\mathbf{w}\|^2 + C \sum_{i=1}^{n} \max(0, 1 - y_i (\mathbf{w} \cdot \phi(\mathbf{x}_i) + b))$$
-   where $\phi(\mathbf{x}_i)$ is the nonlinear transformation applied via the RBF kernel.
+<p>Hyperparameters:<br>
+    C (Regularization Strength):<br>
+      Controls the trade-off between maximizing the margin and minimizing classification errors.  <br>
+      Tested values: [0.1, 1, 10, 100]<br>
+    γ (Gamma - Kernel Coefficient):<br>
+      Defines the reach of each training example's influence in the RBF kernel.  <br>
+      Tested values: [0.001, 0.01, 0.1, 1] with the purpose of scaling the kernel's influence proportionally</p>
+
+    <h3>RBF Kernel (Radial Basis Function):</h3>
+    $$ K(\mathbf{x}_i, \mathbf{x}_j) = \exp\left(-\gamma \cdot \|\mathbf{x}_i - \mathbf{x}_j\|^2\right) $$
+
+    <h3>SVM Loss Function (with L2 Regularization):</h3>
+    $$ \min_{\mathbf{w}, b} \frac{1}{2} \|\mathbf{w}\|^2 + C \sum_{i=1}^{n} \max(0, 1 - y_i (\mathbf{w} \cdot \phi(\mathbf{x}_i) + b)) $$
+    <p>where \( \phi(\mathbf{x}_i) \) is the nonlinear transformation applied via the RBF kernel.</p>
 <h2>Best SVM model</h2>
 <pre><code>svm_grid = GridSearchCV(svm_pipeline, svm_param_grid, cv=5)
 svm_grid.fit(X_train, y_train)
@@ -172,19 +174,64 @@ f1 = f1_score(y_test, y_pred_svm, average=None)
 report = classification_report(y_test, y_pred_svm, target_names=target_names, digits=5)
 print(f"{report}")
 </code></pre>
-The classification report:
-              precision    recall  f1-score   support
-
-      setosa    1.00000   1.00000   1.00000        10
-  versicolor    1.00000   0.90000   0.94737        10
-   virginica    0.90909   1.00000   0.95238        10
-
-    accuracy                        0.96667        30
-   macro avg    0.96970   0.96667   0.96658        30
-weighted avg    0.96970   0.96667   0.96658        30
-
-The empty cells in the "accuracy" row (under precision and recall) exist because accuracy is a single overall metric for the model, not broken down by those categories.<h2>Create dataframe with predictions</h2>
-<pre><code>results_df = pd.DataFrame({
+<h3>The classification report:</h3>
+    <table>
+        <thead>
+            <tr>
+                <th class="label"></th>
+                <th>precision</th>
+                <th>recall</th>
+                <th>f1-score</th>
+                <th>support</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="label">setosa</td>
+                <td>1.00000</td>
+                <td>1.00000</td>
+                <td>1.00000</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td class="label">versicolor</td>
+                <td>1.00000</td>
+                <td>0.90000</td>
+                <td>0.94737</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td class="label">virginica</td>
+                <td>0.90909</td>
+                <td>1.00000</td>
+                <td>0.95238</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td class="label">accuracy</td>
+                <td class="empty"></td>
+                <td class="empty"></td>
+                <td>0.96667</td>
+                <td>30</td>
+            </tr>
+            <tr>
+                <td class="label">macro avg</td>
+                <td>0.96970</td>
+                <td>0.96667</td>
+                <td>0.96658</td>
+                <td>30</td>
+            </tr>
+            <tr>
+                <td class="label">weighted avg</td>
+                <td>0.96970</td>
+                <td>0.96667</td>
+                <td>0.96658</td>
+                <td>30</td>
+            </tr>
+        </tbody>
+    </table>
+    <p>The empty cells in the "accuracy" row (under precision and recall) exist because accuracy is a single overall metric for the model, not broken down by those categories.</p>
+	<pre><code>results_df = pd.DataFrame({
     'Real': y_test,
     'Predicción': y_pred_svm,
     'Correcto': y_test == y_pred_svm
@@ -225,5 +272,6 @@ BEST HYPERPARAMETERS: {'svm__C': 1, 'svm__gamma': 0.1}
 </body>
 
 </html>
+
 
 
